# dbqk

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
_core/: __init__.py  database.py  fetch_mode.py  result.py  table.py
_tests/: README.md  _helpers.py  test_core_structure.py  test_delete.py  test_select.py  test_table_dict.py
_tests/mysql/: README.md  _helpers.py  test_connect.py  test_exec.py  test_insert.py  test_table_dict.py  test_update.py
_tests/pgsql/: README.md  _helpers.py  test_connect.py  test_delete.py  test_exec.py  test_insert.py  test_select.py  test_table_dict.py  test_update.py
mysql_manager/: __init__.py  database.py  exceptions.py  result.py  table.py
pgsql_manager/: __init__.py  database.py  exceptions.py  result.py  table.py
