[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
authors = [
  {name = "wauo", email = "markadc@126.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pymysql>=1.1.0",
  "psycopg2-binary>=2.9.0",
  "dbutils>=3.1.0",
]
description = "一个轻量级的 MySQL / PostgreSQL 连接池 + CRUD 封装库，基于 DBUtils。"
keywords = ["mysql", "postgresql", "pymysql", "psycopg2", "dbutils", "connection-pool", "orm", "crud"]
license = {text = "MIT"}
name = "dbqk"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/markadc/dbqk"
Issues = "https://github.com/markadc/dbqk/issues"
Repository = "https://github.com/markadc/dbqk"

[tool.setuptools.packages.find]
exclude = ["dbqk._tests*", "tests*"]
include = ["dbqk*"]
where = ["."]

[tool.uv]
no-lock = true
